[metadata]
name = genet
description = 'Genome Editing Toolkit'
description-file = README.md

[tool:pytest]
testpaths = tests/
python_files = *.py
python_functions = test_*

[options]
packages = :find

install_requireds = 
    genet_models@git+https://github.com/Goosang-Yu/genet-models.git@1.0.0#egg=genet_models